force-app/main/default/objects/Pay_Batch__c/Pay_Batch__c.object-meta.xml
<CustomObject>
    <label>Pay Batch</label>
    <nameField>
        <displayFormat>PB-{YYMMDD}-{00}</displayFormat>
        <label>Pay Batch</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pay Batches</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>