force-app/main/default/objects/Pay_Batch__c/fields/Batch_Date__c.field-meta.xml
<CustomField>
    <fullName>Batch_Date__c</fullName>
    <description>Actual date this was paid.</description>
    <label>Batch Date</label>
    <type>Date</type>
</CustomField>