force-app/main/default/objects/Pay_Batch__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <referenceTo>Business_Unit__c</referenceTo>
    <relationshipLabel>Pay Batches</relationshipLabel>
    <relationshipName>Business_Unit_Pay_Batches</relationshipName>
    <type>Lookup</type>
</CustomField>