force-app/main/default/objects/Pay_Batch__c/fields/External_Batch_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Batch_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Batch Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>