force-app/main/default/objects/Pay_Batch__c/fields/Pay_Statement_Count__c.field-meta.xml
<CustomField>
    <fullName>Pay_Statement_Count__c</fullName>
    <label>Pay Statement Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>