force-app/main/default/objects/Pay_Batch__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle status of the payment batch.</description>
    <label>Status</label>
    <type>Picklist</type>

    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>

            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>

            <value>
                <fullName>In Progress</fullName>
            </value>

            <value>
                <fullName>Exported</fullName>
            </value>

            <value>
                <fullName>Funded</fullName>
            </value>

            <value>
                <fullName>Closed</fullName>
            </value>

            <value>
                <fullName>Canceled</fullName>
            </value>

        </valueSetDefinition>
    </valueSet>

</CustomField>